[package]
name = "e2e_tests"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"

compiler = { path = "../crates/compiler" }
vm = { path = "../crates/vm" }
vm_types = { path = "../crates/vm_types" }
rayon = "1.7.0"
