[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.0", features = ["derive"] }
path-clean = "1.0.1"
text-size = "1.1.0"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }

compiler = { path = "../compiler" }
parser = { path = "../parser" }
vm = { path = "../vm" }
