[package]
name = "cli"
version = "0.1.0"
edition = "2021"
default-run = "cli"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.3", features = ["derive"] }
exitcode = "1.1.2"
path-clean = "1.0.1"
serde_json = "1.0.96"
serde = { version = "1.0.163", features = ["derive"] }
text-size = "1.1.0"

compiler = { path = "../compiler" }
hir = { path = "../hir" }           # TEMP - remove when Diagnostic is replaced with LSPDiagnostic
parser = { path = "../parser" }
vm = { path = "../vm" }
