[package]
name = "clif_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hir = { path = "../hir" }

cranelift = "0.103.0"
cranelift-module = "0.103.0"
cranelift-jit = "0.103.0"
cranelift-native = "0.103.0"
la-arena = "0.3.1"
text-size = "1.1.1"
proc-macro2 = "1.0.43"
