[package]
name = "clif_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hir = { path = "../hir" }
mir = { path = "../mir" }

cranelift = "0.105.2"
cranelift-module = "0.105.2"
cranelift-jit = "0.105.2"
cranelift-native = "0.105.2"
la-arena = "0.3.1"
ryu = "1.0"
proc-macro2 = "1.0.43"
text-size = "1.1.1"
