[package]
name = "clif_codegen"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hir = { path = "../hir" }
mir = { path = "../mir" }
util_macros = { path = "../util_macros" }

cranelift = "0.115.1"
cranelift-module = "0.115.1"
cranelift-jit = "0.115.1"
cranelift-native = "0.115.1"
la-arena = "0.3.1"
ryu = "1.0"
proc-macro2 = "1.0.43"
text-size = "1.1.1"
