[package]
name = "compiler"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
vm_codegen = { path = "../vm_codegen" }
hir = { path = "../hir" }
parser = { path = "../parser" }
