[package]
name = "hir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
ast = { path = "../ast" }
id_tree = "1.8.0"
itertools = "0.10.5"
la-arena = "0.3.1"
lasso = "0.7.2"
lsp_diagnostic = { path = "../lsp_diagnostic" }
parser = { path = "../parser" }
text-size = "1.1.1"

[dev-dependencies]
expect-test = "1.4.0"
indoc = "2"
text-diff = "0.4.0"
