[package]
name = "mir"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
la-arena = "0.3.1"

hir = { path = "../hir" }
util_macros = { path = "../util_macros" }

[dev-dependencies]
text-diff = "0.4.0"
