[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bytemuck = "1.12.3"
codegen = { path = "../codegen" }
hir = { path = "../hir" }
memory_recycling = { path = "../memory_recycling" }
