[package]
name = "vm"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
exitcode = "1.1.2"
lasso = "0.6.0"
memory_recycling = { path = "../memory_recycling" }
vm_boxed_types = { path = "../vm_boxed_types" }
vm_codegen = { path = "../vm_codegen" }
vm_string = { path = "../vm_string" }
vm_types = { path = "../vm_types" }
