[package]
name = "_harness"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
compiler = { path = "../../crates/compiler" }
vm = { path = "../../crates/vm" }
vm_types = { path = "../../crates/vm_types" }
exitcode = "1.1.2"
